# Learning_Management_System

Backend/: app.py  db__init__.py  pyproject.toml  requirements.txt
Backend/src/: __init__.py  config.py  extentions.py
Backend/src/decorators/: role_decorator.py
Backend/src/models/: assignments.py  course.py  enrollment.py  notification.py  submission.py  user.py
Backend/src/routes/: admin.py  attendance.py  auth.py  notification_routes.py  student.py  student_crud.py  teacher.py  teacher_crud.py
Backend/src/schemas/: auth_schema.py
Backend/src/sockets/: events.py
Backend/src/utils/: file_upload.py
Frontend/: README.md  REDESIGN_SUMMARY.md  next.config.js  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.tsbuildinfo
Frontend/app/: globals.css  layout.tsx  page.tsx
Frontend/app/admin/: page.tsx
Frontend/app/admin/announce/: page.tsx
Frontend/app/admin/courses/: page.tsx
Frontend/app/admin/create-user/: page.tsx
Frontend/app/admin/students/: page.tsx
Frontend/app/admin/teachers/: page.tsx
Frontend/app/admin/users/: page.tsx
Frontend/app/login/: page.tsx
Frontend/app/notifications/: page.tsx
Frontend/app/student/: page.tsx
Frontend/app/teacher/: page.tsx
Frontend/components/: DashboardLayout.tsx  NotificationBell.tsx  ProtectedRoute.tsx  ui.tsx
Frontend/components/layout/: DashboardLayout.tsx  Navbar.tsx  Sidebar.tsx
Frontend/components/ui/: Button.tsx  Card.tsx  Input.tsx  Modal.tsx  Select.tsx  index.ts
Frontend/context/: AuthContext.tsx
Frontend/lib/: api.ts
(+9 files in other folders)
