[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "eventlet==0.33.3",
    "flask==2.3.3",
    "flask-bcrypt==1.0.1",
    "flask-cors==4.0.0",
    "flask-jwt-extended==4.5.3",
    "flask-limiter==4.1.1",
    "flask-mail==0.10.0",
    "flask-socketio==5.3.6",
    "flask-sqlalchemy==3.1.1",
    "flask-talisman==1.1.0",
    "marshmallow==3.20.1",
    "pymysql==1.1.0",
    "pytest==7.4.0",
    "pytest-cov==4.1.0",
    "python-dotenv>=1.2.2",
    "python-socketio==5.8.0",
    "redis==5.0.1",
]
